fix: fix color scheme on just

--- a/vis-portal/justfile
+++ b/vis-portal/justfile
@@ -3,8 +3,8 @@ default:
     @just --list
 
 GREEN  := "\\u001b[32m"
-RESET  := "\\u001b[0m"
-CHECK  := `/usr/bin/printf "\xE2\x9C\x94"`
+RESET  := "\\u001b[0m\\n"
+CHECK  := "\\xE2\\x9C\\x94"
 
 build:
     @yarn dev
@@ -13,4 +13,4 @@ up: build
     ./build
 
 test:
-    @echo -e " {{GREEN}}{{CHECK}} No tests yet, so guess they pass? {{CHECK}} {{RESET}}"
+    @echo  " {{CHECK}} No tests yet, so guess they pass? {{CHECK}}"
