--- a/vis-portal/package.json
+++ b/vis-portal/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@tremor/react": "^2.1.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
@@ -18,6 +19,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "5.0.3"
   },
   "devDependencies": {
