--- a/vis-portal/package.json
+++ b/vis-portal/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
