--- a/vis-portal/package.json
+++ b/vis-portal/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@sendgrid/mail": "^7.7.0",
     "@tremor/react": "^2.1.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
