--- a/vis-portal/package.json
+++ b/vis-portal/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "mongodb": "^5.6.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
