--- a/vis-portal/package.json
+++ b/vis-portal/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.3",
     "@sendgrid/mail": "^7.7.0",
     "@tremor/react": "^2.1.0",
